Refactor compilation